--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,10 @@ body {
     display: inline-block;
     margin: 0 2px !important;
 }
+
+.border-gradient {
+    border-width: 1px;
+    border-style: solid;
+    border-image-source: linear-gradient(90deg, rgba(17, 45, 73, 0) 0%, #112D49 51.44%, rgba(17, 45, 73, 0) 100%);
+    border-image-slice: 1;
+}
