--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,12 @@ body {
     border-image-source: linear-gradient(90deg, rgba(17, 45, 73, 0) 0%, #112D49 51.44%, rgba(17, 45, 73, 0) 100%);
     border-image-slice: 1;
 }
+
+.footer-gradient-border {
+    border-top: 1px solid;
+    border-image-source: linear-gradient(90deg,
+            rgba(255, 255, 255, 0) 3.37%,
+            rgba(255, 255, 255, 0.8) 51.44%,
+            rgba(255, 255, 255, 0) 100%);
+    border-image-slice: 1;
+}
