--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,40 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
+
+body {
+    font-family: "Montserrat", sans-serif;
+}
+
+.carousel .control-dots .dot.selected {
+    background: #112D49 !important;
+    width: 51px !important;
+}
+
+.carousel .control-dots .dot {
+    border-radius: 22px !important;
+    width: 21px !important;
+    height: 6px !important;
+    cursor: pointer;
+    display: inline-block;
+    margin: 0 2px !important;
+}
+
+.border-gradient {
+    border-width: 1px;
+    border-style: solid;
+    border-image-source: linear-gradient(90deg, rgba(17, 45, 73, 0) 0%, #112D49 51.44%, rgba(17, 45, 73, 0) 100%);
+    border-image-slice: 1;
+}
+
+.footer-gradient-border {
+    border-top: 1px solid;
+    border-image-source: linear-gradient(90deg,
+            rgba(255, 255, 255, 0) 3.37%,
+            rgba(255, 255, 255, 0.8) 51.44%,
+            rgba(255, 255, 255, 0) 100%);
+    border-image-slice: 1;
+}
+
+.slider-wrapper {
+    padding-bottom: 40px !important;
+}
