--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,8 @@ body {
 .slider-wrapper {
     padding-bottom: 40px !important;
 }
+
+.gradient-border {
+    border-bottom: 1.5px solid;
+    border-image: linear-gradient(90deg, rgba(17, 45, 73, 0) 0%, #112D49 52.4%, rgba(17, 45, 73, 0) 100%) 1;
+}
